syntax = "proto3";

option csharp_namespace = "Proto.Notifications.Tag";


service NotificationService {
  rpc SendTagCreated(TagCreatedNotification) returns (NotificationResponse);
  rpc SendTagUpdated(TagUpdatedNotification) returns (NotificationResponse);
}

message TagCreatedNotification {
  string tagId = 1;
  string name = 2;
}

message TagUpdatedNotification {
  string tagId = 1;
  string name = 2;
}

message NotificationResponse {
  bool success = 1;
}
